--- a/css/style.css
+++ b/css/style.css
@@ -1,153 +1,370 @@
 body {
-    margin: 0px;
     text-align: center;
-    line-height: 2;
 }
 
-div{
-    background-color: #e4f9f5;
-    
-    
+header {
+    background-color: skyblue;
+    position: relative;
 }
 
-h1{
-    font-family: 'Satisfy', cursive;
-    font-size: 90px;
-    color: black ;
-    line-height: normal;
+.top-cloud {
+    position: relative;
+    left: 17rem;
+    margin-top: 1rem;;
+}
+
+.bottom-cloud {
+    position: absolute;
+    top: 25rem;
+    left: 8rem;
+}
+
+h1 {
+    font-size: 5rem;
+}
+
+@media(min-width: 768px) {
+    h1 {
+        font-size: 3rem;
+    }
+
+    header h1 {
+        font-size: 5rem;
+    }
 }
 
 h2 {
-    font-family: 'Merriweather', serif;
-    font-size: 30px;
-    color: black ;
-    font-weight: normal;
-}
-h3{
-    color: #66BFBF;
-    font-size: 25px;
+    font-size: 3rem;
 }
 
-p{
-    font-family: 'Merriweather', serif;
-    font-size: 24px;
+@media(min-width: 768px) {
+    h2 {
+        font-size: 2rem;
+    }
+
+    header h2 {
+        font-size: 2.5rem;
+    }
 }
 
-.top-container{
-    background-color: skyblue;
-    padding: 100px;
-    position: relative;
-
+.profile img {
+    width: 30rem;
+    margin: 3rem; 
 }
 
-
-.top-cloud{
-    height: 90px;
-    position: absolute;
-    right :333px;
-    top: 20px;
+@media(min-width: 768px) {
+    .profile img {
+        width: 25rem;
+        margin: 3rem; 
+    }
 }
 
-.bottom-cloud{
-    height: 90px;
-    position: absolute;
-    left: 367px;
-    bottom: 425px;
+.profile h2 {
+    padding: 2rem;
 }
 
-.middle-container{
-    padding-top: 50px;
-}
-
-.mountain{
-    height: 400px;
-}
-
-.skill-row{
-    width: 50%;
-    margin: 100px auto 100px auto;
-    text-align: left;
-}
-
-.html{
-    height: 200px;
-    float: left;
-    padding-right: 30px;
-}
-
-.css {
-    height: 200px;
-    float: right;
-    padding-right: 30px;
-}
-
-.bootstrap {
-    height: 200px;
-    float: left;
-    padding-right: 30px;
-}
-.javascript {
-    height: 200px;
-    float: right;
-    padding-right: 30px;
-}
-.jquery {
-    height: 200px;
-    float: left;
-    padding-right: 30px;
-}
-.nodejs {
-    height: 200px;
-    float: right;
-    padding-right: 30px;
-}
-
-.react {
-    height: 200px;
-    float: left;
-    padding-right: 30px;
-}
-
-.footer-link{
-    color: #66BFBF;
-
-}
-
-.btn {
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    color: #FFFFFF;
-    font-family: Helvetica;
-    font-size: 25px;
-    font-weight: 100;
-    padding: 20px;
-    background-color: #66BFBF;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
-    margin-bottom: 30px;
- }
- 
- .btn:hover {
-    background: #97DDDD;
-    border: solid #97DDDD 1px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    text-decoration: none;
- }
-
- .bottom-container{
-    
-    background-color: #66BFBF;
- }
-
- hr {
-    border: 20px dotted lightgray;
-    width: 10%;
-    border-top: 0;
+hr {
+    border: 50px dotted grey; 
+    width: 20%;
     border-left: 0;
     border-right: 0;
- }
+    border-bottom: 0;
+}
+
+@media(min-width: 768px) {
+    hr {
+        border: 20px dotted grey; 
+        width: 10%;
+        border-left: 0;
+        border-right: 0;
+        border-bottom: 0;
+    }
+}
+
+@media(min-width: 768px) {
+    
+    .skills{
+        margin: 5rem;
+        text-align: justify;
+        font-size: 2rem;
+        margin-left: 15rem;
+        margin-right: 15rem;
+    }
+
+    .skill-row img {
+        margin: 2rem;
+        max-height: 10rem; 
+    }
+}
+
+
+.skills{
+    margin: 5rem;
+    text-align: justify;
+    margin-left: 7rem;
+    margin-right: 7rem;
+}
+
+
+
+.skill-row {
+    margin-bottom: 3rem;
+}
+
+.skill-row .html{
+    float: left;
+    width: 10rem; 
+    margin: 2rem;
+}
+
+.skill-row .css{
+    float: right;
+    width: 10rem;
+    margin: 2rem;
+}
+
+.skill-row .javascript{
+    float: left;
+    width: 10rem;
+    margin: 2rem;
+}
+
+.skill-row .github{
+    float: right;
+    width: 10rem;
+    margin: 2rem;
+}
+
+.skill-row:nth-child(2n) h3{
+    text-align: right;
+}
+
+.contact-me p{
+    margin: 2rem 5rem;
+}
+
+.contact-me h1 {
+    font-size: 5rem;
+}
+
+@media(min-width: 768px) {
+    .contact-me h1 {
+        font-size: 3rem;
+    }
+
+    .contact-me p {
+        font-size: 2rem;
+    }
+}
+
+.btn  {
+    background-color: skyblue;
+    border-radius: 15px;
+    height: 5rem;
+    width: 15rem;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+@media(min-width: 768px) {
+    .btn  {
+        background-color: skyblue;
+        border-radius: 15px;
+        height: 3rem;
+        width: 12rem;
+        font-size: 2rem;
+        margin-bottom: 2rem;
+    }
+}
+
+.btn a {
+    text-decoration: none;
+}
+
+footer {
+    background-color: skyblue;
+    padding: 2rem;
+}
+
+.footer-link {
+    font-size: 3rem;
+    margin: 1rem;
+    text-decoration: none;
+    color: white;
+    border: 5px solid black;
+    padding: 0.5rem;
+    border-radius: 15px;
+    border-left:0;
+    border-right:0;
+    border-top: 0;
+}
+
+@media(min-width: 768px) {
+    .footer-link {
+        font-size: 2rem;
+        margin: 1rem;
+        text-decoration: none;
+        color: white;
+        border: 5px solid black;
+        padding: 0.5rem;
+        border-radius: 15px;
+        border-left:0;
+        border-right:0;
+        border-top: 0;
+    }
+}
+
+footer p {
+    margin: 3rem;
+}
+
+@media(min-width: 768px) {
+    footer p {
+        margin: 3rem;
+        font-size: 1rem;
+    }
+}
+
+
+
+.project {
+    margin: 3rem;
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 2rem;
+}
+
+.proImage {
+    height: 12rem;
+    margin: 2rem;
+    border: 1px solid black;
+    padding: 2rem;
+}
+@media (min-width: 768px) {
+    .project {
+        margin: 3rem 10rem;
+        border: 1px solid black;
+        border-radius: 15px;
+        padding: 2rem;
+    }
+
+    .project h1 {
+        font-size: 2rem;
+        color: black;
+    }
+
+    .project p {
+        font-size: 1.5rem;
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+}
+
+.project a h1 {
+    text-decoration: none;
+    font-size: 3rem;
+}
+
+/* @media (min-width: 768px) {
+    h1 {
+        font-size: 3rem;
+    }
+
+    header h1 {
+        font-size: 5rem;
+    }
+    
+    h2 {
+        font-size: 2rem;
+    }
+
+    header h2 {
+        font-size: 2.5rem;
+    }
+
+    .profile img {
+        width: 25rem;
+        margin: 3rem; 
+    }
+
+    hr {
+        border: 20px dotted grey; 
+        width: 10%;
+        border-left: 0;
+        border-right: 0;
+        border-bottom: 0;
+    }
+
+    .skills{
+        margin: 5rem;
+        text-align: justify;
+        font-size: 2rem;
+        margin-left: 15rem;
+        margin-right: 15rem;
+    }
+
+    .skill-row img {
+        margin: 2rem;
+        max-height: 10rem; 
+    }
+
+    .contact-me h1 {
+        font-size: 3rem;
+    }
+
+    .contact-me p {
+        font-size: 2rem;
+    }
+
+    .btn  {
+        background-color: skyblue;
+        border-radius: 15px;
+        height: 3rem;
+        width: 12rem;
+        font-size: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .footer-link {
+        font-size: 2rem;
+        margin: 1rem;
+        text-decoration: none;
+        color: white;
+        border: 5px solid black;
+        padding: 0.5rem;
+        border-radius: 15px;
+        border-left:0;
+        border-right:0;
+        border-top: 0;
+    }
+
+    footer p {
+        margin: 3rem;
+        font-size: 1rem;
+    }
+
+    .project {
+        margin: 3rem 10rem;
+        border: 1px solid black;
+        border-radius: 15px;
+        padding: 2rem;
+    }
+
+    .project h1 {
+        font-size: 2rem;
+        color: black;
+    }
+
+    .project p {
+        font-size: 1.5rem;
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+
+    .proImage {
+        height: 20rem;
+        margin: 2rem;
+        border: 1px solid black;
+        padding: 2rem;
+    }
+} */
